# six_leg_robot

./: CMakeLists.txt  README.md
lib/: MCDLL_Define.h  MCDLL_NET.h  MCDLL_NET.lib  MCDLL_Return.h
src/: kinematic.cpp  kinematic.h  main.cpp  plan.cpp  plan.h
